Fixed bug #61088 (Memory leak in readline_callback_handler_install).